@@ -1,5 +1,5 @@
 /*
- * Copyright 2018 the original author or authors.
+ * Copyright 2018-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -48,6 +48,7 @@ import org.springframework.kafka.core.DefaultKafkaConsumerFactory;
 import org.springframework.kafka.core.DefaultKafkaProducerFactory;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.kafka.core.ProducerFactory;
+import org.springframework.kafka.support.KafkaStreamBrancher;
 import org.springframework.kafka.test.EmbeddedKafkaBroker;
 import org.springframework.kafka.test.context.EmbeddedKafka;
 import org.springframework.kafka.test.utils.KafkaTestUtils;
@@ -57,6 +58,7 @@ import org.springframework.test.context.junit4.SpringRunner;
 /**
  * @author Elliot Kennedy
  * @author Artem Bilan
+ * @author Ivan Ponomarev
  *
  * @since 1.3.3
  */
@@ -154,19 +156,14 @@ public class KafkaStreamsBranchTests {
 		}
 
 		@Bean
-		@SuppressWarnings("unchecked")
 		public KStream<String, String> trueFalseStream(StreamsBuilder streamsBuilder) {
-			KStream<String, String> trueFalseStream = streamsBuilder
-					.stream(TRUE_FALSE_INPUT_TOPIC, Consumed.with(Serdes.String(), Serdes.String()));
-
-			KStream<String, String>[] branches =
-					trueFalseStream.branch((key, value) -> String.valueOf(true).equals(value),
-							(key, value) -> String.valueOf(false).equals(value));
-
-			branches[0].to(TRUE_TOPIC, Produced.with(Serdes.String(), Serdes.String()));
-			branches[1].to(FALSE_TOPIC, Produced.with(Serdes.String(), Serdes.String()));
-
-			return trueFalseStream;
+			return new KafkaStreamBrancher<String, String>()
+					.branch((key, value) -> String.valueOf(true).equals(value),
+							ks -> ks.to(TRUE_TOPIC, Produced.with(Serdes.String(), Serdes.String())))
+					.branch((key, value) -> String.valueOf(false).equals(value),
+							ks -> ks.to(FALSE_TOPIC, Produced.with(Serdes.String(), Serdes.String())))
+					.onTopOf(streamsBuilder
+							.stream(TRUE_FALSE_INPUT_TOPIC, Consumed.with(Serdes.String(), Serdes.String())));
 		}
 
 	}
