@@ -77,6 +77,7 @@
 		<module name="AvoidStaticImport">
 			<property name="excludes"
 				value="org.assertj.core.api.Assertions.*,
+				org.junit.jupiter.api.Assertions.*,
 				org.junit.Assert.*,
 				org.junit.Assume.*,
 				org.junit.internal.matchers.ThrowableMessageMatcher.*,
